kubernetes/apps/tools/couchdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: tools
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - couchdb.local.elmurphy.com
  rules:
    - backendRefs:
        - name: couchdb
          port: 5984
